# FinApp_Kiro

./: .gitignore  README.md
.github/: CODEOWNERS
backend/: .env.example  .gitignore  GCP-VM-Backend.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 271004d5de41_initial_schema_create_all_tables.py  3a50039ff10a_merge_heads.py  5a95785ba58c_add_broker_to_options_trades.py  6c99e5b26de2_make_transaction_holding_id_nullable.py  a1b2c3d4e5f6_add_holding_type_column.py  b2d88c8187fe_add_broker_column.py  cf3d27a1b9e4_add_options_trades_table.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  cash_balance.py  holding.py  options_trade.py  price_history.py  transaction.py  watchlist_item.py
backend/app/repositories/: __init__.py  cash_balance_repository.py  holdings_repository.py  options_repository.py  price_history_repository.py  transaction_repository.py  watchlist_repository.py
backend/app/routers/: __init__.py  dashboard.py  etf_holdings.py  holdings.py  market.py  options.py  portfolio_analysis.py  transactions.py  watchlist.py
backend/app/schemas/: __init__.py  common.py  dashboard.py  holding.py  market.py  options.py  portfolio_analysis.py  transaction.py  watchlist.py
backend/app/services/: __init__.py  dashboard_service.py  holdings_service.py  market_data_service.py  options_service.py  portfolio_analysis_service.py  transaction_service.py  watchlist_service.py
backend/scripts/: reset_database.py
backend/tests/: __init__.py  conftest.py
backend/tests/integration/: __init__.py  test_backend_integration.py  test_dashboard_router.py  test_etf_holdings_router.py  test_holdings_router.py  test_market_router.py  test_watchlist_router.py
backend/tests/property/: __init__.py  test_api_contracts.py  test_data_integrity.py  test_filter_sort_activity.py  test_metrics_calculations.py  test_schema_validation.py  (+1 more)
(+111 files in other folders)
